Add javafx-plugin to properly define command line arguments